# dyciferpy

./: .gitignore  MANIFEST.in  Pipfile  README.html  README.md  README.rst  pyproject.toml  requirements.txt
.github/workflows/: dycifer-app.yml  lint.yml
docs/: adc-example.md  caos-amplifier-example.md  dependencies.md  enob.md  indicators.md  rise-time.md
resources/: mixed-signal-run.txt
resources/data/: fft_points_c2c_256_bin7.csv  fft_points_c2c_256_x2_bin11_noise.csv  fool_test_signals.csv  test_signals.csv  test_signals2.csv  test_signals3.csv
resources/tables/: adc_spectrum.csv  adc_spectrum.json  adc_spectrum.md  adc_spectrum.tex  test_mixed_signals_adcDynamicEval.csv  test_mixed_signals_adcDynamicEval.json  test_mixed_signals_adcDynamicEval.md  test_mixed_signals_adcDynamicEval.tex
resources/tables_jonny/: .csv  .json  .md  .tex  adc_spectrum.csv  adc_spectrum.json  adc_spectrum.md  adc_spectrum.tex  mixed_signals_adcDynamicEval_cadence_data.csv  mixed_signals_adcDynamicEval_cadence_data.json  mixed_signals_adcDynamicEval_cadence_data.md  mixed_signals_adcDynamicEval_cadence_data.tex  test_dycifer_cli_analog_caosDynamicEval_cadence_data.csv  test_dycifer_cli_analog_caosDynamicEval_cadence_data.json  test_dycifer_cli_analog_caosDynamicEval_cadence_data.md  test_dycifer_cli_analog_caosDynamicEval_cadence_data.tex  test_dycifer_cli_mixed_signals_adcDynamicEval_textfile_parsing.csv  test_dycifer_cli_mixed_signals_adcDynamicEval_textfile_parsing.json  (+2 more)
src/dycifer/: __init__.py  (+5 more)
tests/: test_adc_dynamic_eval.py  test_caos_amplifier_eval.py  test_dycifer.py
