[tool.poetry]
name = "dycifer"
version = "0.1.0"
description = "DYCIFER (Dynamic Circuits Performance Evaluation Tool) is a tool dedicated to the calculation of the performance indicators of integrated circuits operating at relatively high frequencies."
authors = ["Diogo André S. Dias <das.dias6@gmail.com>"]
keywords = ["dynamic integrated circuit", "performance evaluation", "tool", "eda"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.4"
pandas = "^1.4.2"
pyfiglet = "^0.8.post1"
matplotlib = "^3.5.2"
argparse = "^1.4.0"
loguru = "^0.6.0"
modelling-utils = "^0.2.11"
scipy = "^1.8.1"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dycifer = "dycifer.dycifer:cli"
